Add vExpert badge

--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -5,3 +5,8 @@
     </a>
   </li>
 -->
+<p>
+  <a href="https://vexpert.vmware.com/directory/3806">
+	<img src="/assets/images/vexpert2019.png" alt="vExpert 2019" style="width:143px;height:90px;">
+  </a>
+</p>
